force-app/main/default/objects/Endpoint_Header_List__mdt/Endpoint_Header_List__mdt.object-meta.xml
<CustomObject>
    <label>Endpoint Header List</label>
    <pluralLabel>Endpoint Header List</pluralLabel>
</CustomObject>