force-app/main/default/objects/Endpoint_Header_List__mdt/fields/Additional_Value__c.field-meta.xml
<CustomField>
    <fullName>Additional_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Value</label>
    <type>Checkbox</type>
</CustomField>