force-app/main/default/objects/Endpoint_Header_List__mdt/fields/Algorithms2__c.field-meta.xml
<CustomField>
    <fullName>Algorithms2__c</fullName>
    <label>Algorithms2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hmacMD5</fullName>
            </value>
            <value>
                <fullName>hmacSHA1</fullName>
            </value>
            <value>
                <fullName>hmacSHA256</fullName>
            </value>
            <value>
                <fullName>hmacSHA512</fullName>
            </value>
            <value>
                <fullName>RSA</fullName>
            </value>
            <value>
                <fullName>RSA-SHA1</fullName>
            </value>
            <value>
                <fullName>RSA-SHA256</fullName>
            </value>
            <value>
                <fullName>RSA-SHA384</fullName>
            </value>
            <value>
                <fullName>RSA-SHA512</fullName>
            </value>
            <value>
                <fullName>ECDSA-SHA256</fullName>
            </value>
            <value>
                <fullName>ECDSA-SHA256-PLAIN</fullName>
            </value>
            <value>
                <fullName>ECDSA-SHA384</fullName>
            </value>
            <value>
                <fullName>ECDSA-SHA512</fullName>
            </value>
            <value>
                <fullName>MD5</fullName>
            </value>
            <value>
                <fullName>SHA1</fullName>
            </value>
            <value>
                <fullName>SHA3-256</fullName>
            </value>
            <value>
                <fullName>SHA3-384</fullName>
            </value>
            <value>
                <fullName>SHA3-512</fullName>
            </value>
            <value>
                <fullName>SHA-256</fullName>
            </value>
            <value>
                <fullName>SHA-512</fullName>
            </value>
            <value>
                <fullName>AES128</fullName>
            </value>
            <value>
                <fullName>AES128-CBC</fullName>
            </value>
            <value>
                <fullName>AES192</fullName>
            </value>
            <value>
                <fullName>AES192-CBC</fullName>
            </value>
            <value>
                <fullName>AES256</fullName>
            </value>
            <value>
                <fullName>AES256-CBC</fullName>
            </value>
            <value>
                <fullName>AES256-GCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>