force-app/main/default/objects/Endpoint_Header_List__mdt/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>generateMac</fullName>
            </value>
            <value>
                <fullName>signWithCertificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>