force-app/main/default/objects/Endpoint_Header_List__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SessionID</fullName>
            </value>
            <value>
                <fullName>Timestamp</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>ExternalID</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
                <isActive>false</isActive>
                <label>Authorization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>